<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/provider_gps"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvenableGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvlocationGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/provider_network"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEnableNET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvlocationNET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_settings"
            android:layout_margin="5dp"
            />

        <ProgressBar
            android:id="@+id/pb_main"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

